Added live data but not fully working

--- a/app/src/main/res/layout/album_info.xml
+++ b/app/src/main/res/layout/album_info.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/purple_200"
-    android:layout_marginBottom="550dp"
-    android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/albumImage"
-    ></ImageView>
-
-    <TextView
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/albumText"
-        android:gravity="right"
-        android:layout_marginLeft="150dp"
-    ></TextView>
+        android:layout_height="match_parent"
+        android:layout_marginBottom="550dp"
+        android:orientation="vertical"
+        android:theme="@style/BlueTileWhiteText">
 
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/albumImage"
+            android:paddingLeft="10dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            ></ImageView>
 
-
-</FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/albumText"
+            android:gravity="right"
+            android:layout_marginLeft="150dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            ></TextView>
+    </FrameLayout>
+</layout>
