--- a/app/src/main/res/layout/album_list.xml
+++ b/app/src/main/res/layout/album_list.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/album_id"
-        android:text="Album ID"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="30sp"
-    ></TextView>
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/albumList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="@android:color/white"
-        android:dividerHeight="10.0sp"
-    ></ListView>
+        <TextView
+            android:id="@+id/album_id"
+            android:text="Album ID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="30sp"
+            />
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/albumList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@android:color/white"
+            android:dividerHeight="10.0sp" />
+
+    </LinearLayout>
+</layout>
