--- a/app/src/main/res/layout/thumbnail_info.xml
+++ b/app/src/main/res/layout/thumbnail_info.xml
@@ -1,48 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/thumbnail_album_id"
-            android:text="Album ID"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="30sp"
-            ></TextView>
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/thumbnail_photo_id"
-            android:text="Photo ID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="30sp"
-            ></TextView>
+            <TextView
+                android:id="@+id/thumbnail_album_id"
+                android:text="Album ID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="30sp"
+                ></TextView>
 
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/thumbnail"
-            android:layout_gravity="center_horizontal"
-            ></ImageView>
+            <TextView
+                android:id="@+id/thumbnail_photo_id"
+                android:text="Photo ID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="30sp"
+                ></TextView>
 
-        <TextView
-            android:id="@+id/thumbnailText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="30sp"
-            ></TextView>
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:id="@+id/thumbnail"
+                android:layout_gravity="center_horizontal"
 
-    </LinearLayout>
-</ScrollView>
+                ></ImageView>
+
+            <TextView
+                android:id="@+id/thumbnailText"
+                loadImageFromUrl=""
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="30sp"
+                android:layout_marginTop="30dp"
+                android:theme="@style/BlueTileWhiteText"
+                ></TextView>
+
+        </LinearLayout>
+    </ScrollView>
+</layout>
+
