--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/purple_200"
-    android:layout_marginBottom="600dp"
-    android:layout_marginTop="50dp"
-    android:id="@+id/userInfo"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/id"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="ID"
-    ></TextView>
+        android:layout_height="match_parent"
+        android:layout_marginBottom="600dp"
+        android:layout_marginTop="50dp"
+        android:id="@+id/userInfo"
+        android:orientation="vertical"
+        android:theme="@style/BlueTileWhiteText">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/name"
-        android:gravity="left"
-        android:text="Name:"
-    ></TextView>
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="ID"
+            ></TextView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:gravity="left"
-        android:text="Email:"
-    ></TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/name"
+            android:gravity="left"
+            android:text="Name:"
+            ></TextView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/phone"
-        android:gravity="left"
-        android:text="Phone:"
-    ></TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/email"
+            android:gravity="left"
+            android:text="Email:"
+            ></TextView>
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/phone"
+            android:gravity="left"
+            android:text="Phone:"
+            ></TextView>
+
+    </LinearLayout>
+
+</layout>
 
