--- a/app/src/main/res/layout/album_list.xml
+++ b/app/src/main/res/layout/album_list.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="title"
+            type="String" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -8,7 +14,7 @@
 
         <TextView
             android:id="@+id/album_id"
-            android:text="Album ID"
+            android:text="@{title}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
