--- a/app/src/main/res/layout/thumbnail_info.xml
+++ b/app/src/main/res/layout/thumbnail_info.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <data>
+        <variable
+            name="albumID"
+            type="String" />
+        <variable
+            name="text"
+            type="String" />
+        <variable
+            name="photoID"
+            type="String" />
+    </data>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,20 +25,20 @@
 
             <TextView
                 android:id="@+id/thumbnail_album_id"
-                android:text="Album ID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="30sp"
+                android:text="@{albumID}"
                 ></TextView>
 
             <TextView
                 android:id="@+id/thumbnail_photo_id"
-                android:text="Photo ID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="30sp"
+                android:text="@{photoID}"
                 ></TextView>
 
             <ImageView
@@ -41,7 +51,7 @@
 
             <TextView
                 android:id="@+id/thumbnailText"
-                loadImageFromUrl=""
+                android:text="@{text}"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
