--- a/app/src/main/res/layout/album_info.xml
+++ b/app/src/main/res/layout/album_info.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="text"
+            type="String" />
+        <variable
+            name="image"
+            type="String" />
+    </data>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,6 +32,7 @@
             android:layout_marginLeft="150dp"
             android:paddingTop="10dp"
             android:paddingRight="10dp"
+            android:text="@{text}"
             ></TextView>
     </FrameLayout>
 </layout>
