--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout  xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="titleName"
+            type="String" />
+    </data>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -8,11 +13,11 @@
 
         <TextView
             android:id="@+id/title"
-            android:text="User Info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="30sp"
+            android:textSize="@dimen/text_size"
+            android:text="@{titleName}"
             ></TextView>
 
         <ListView
