Fragment constructor bug

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -5,12 +5,11 @@
     android:id="@+id/my_nav"
     app:startDestination="@id/userFragment">
 
-
     <fragment
         android:id="@+id/userFragment"
         android:name="com.example.helloworld.UserFragment"
         android:label="UserFragment"
-        tools:layout="@layout/user_list">>
+        tools:layout="@layout/user_list">
 
         <action
             android:id="@+id/action_userFragment_to_albumFragment"
@@ -21,13 +20,16 @@
         android:name="com.example.helloworld.AlbumFragment"
         android:label="AlbumFragment"
         tools:layout="@layout/album_list">
-        <action
-            android:id="@+id/action_albumFragment_to_thumbnailFragment"
-            app:destination="@id/thumbnailFragment" />
+<!--        <action-->
+<!--            android:id="@+id/action_albumFragment_to_thumbnailFragment"-->
+<!--            app:destination="@id/thumbnailFragment" />-->
+<!--        <argument-->
+<!--            android:name="position"-->
+<!--            app:argType="integer" />-->
     </fragment>
     <fragment
         android:id="@+id/thumbnailFragment"
         android:name="com.example.sampleapp.ThumbnailFragment"
         android:label="ThumbnailFragment"
-        tools:layout="@layout/thumbnail_info"/>
+        tools:layout="@layout/thumbnail_info" />
 </navigation>
